# telegram_language_bot

./: .env.dist  Makefile  app.py  db_migrate.py  loader.py  main.py  pyproject.toml  requirements.txt
bot/commands/: default.py
bot/handlers/users/: __init__.py  collection.py  helpers.py  menu.py  sentence.py  start.py  web_app_test.py
bot/keyboards/inline/collection/: delete_collection.py  menu_collection.py  select_collection.py
bot/keyboards/inline/collection/states/: finish_change_collection.py  finish_create_collection.py
bot/keyboards/inline/menu/: menu.py  sentence.py
bot/keyboards/inline/sentence/: delete_sentence.py  menu_sentence.py  select_sentence.py
bot/keyboards/inline/sentence/states/: finish_create_sentence.py
bot/middlewares/: __init__.py
bot/states/: __init__.py
bot/states/collection/: __init__.py  change_collection.py  create_collection.py
bot/states/sentence/: __init__.py  create_sentence.py
data/: config.py
data/locales/: bot.pot
data/locales/de/LC_MESSAGES/: bot.mo  bot.po
data/locales/en/LC_MESSAGES/: bot.mo  bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
migrations/: 001_Init.py  002_Init.py  002_migration_name.py  003_migration_name.py
models/: __init__.py  collection.py  sentence.py  user.py
services/: collection.py  sentence.py  users.py
utils/: fint_card.py  translate.py  validation.py
utils/misc/: logging.py
