[tool.poetry]
name = "repl_nix_telegramlanguagebot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
googletrans = "^3.0.0"
langdetect = "^1.0.9"
loguru = "^0.6.0"
peewee = "^3.16.0"
python-decouple = "^3.8"
aiogram = "^2.25.1"
iso639 = "0.1.4"
iso-639 = "0.4.5"
peewee-migrate = "1.7.0"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
